fix: make close button for modal always stay at the top right including horizontal scroll

--- a/public/css/main.less
+++ b/public/css/main.less
@@ -829,15 +829,17 @@ html {
                 }
             }
 
-            div {
+            dialog {
 
-                &#image_credits {
-                    display: none;
-                    overflow: scroll;
+                &#credits_dialog {
 
                     img {
-                        position: sticky;
-                        float: right;
+                        position: fixed;
+                        top: 10px;
+                        right: 10px;
+                        width: initial;
+                        backdrop-filter: blur(5px);
+                        border-radius: 5px;
                     }
 
                     table {
